--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -166,12 +166,20 @@
   z-index: 2;
 }
 
+.margin-tp-n100 {
+  margin-top: -100px;
+}
+
 .margin-auto {
   margin: auto;
 }
 
 .margin-bm-16 {
   margin-bottom: 16px;
+}
+
+.margin-bm-22 {
+  margin-bottom: 22px;
 }
 
 .margin-bm-32 {
