[Added] profile menu for signed in users

--- a/Client/src/assets/styling/components/_userHome.scss
+++ b/Client/src/assets/styling/components/_userHome.scss
@@ -6,19 +6,19 @@
   display: flex;
   justify-content: space-between;
 
-  .user-home-sign-out-btn {
+  .user-home-profile-btn {
     background: transparent;
     transition: all 0.2s ease-in-out;
     padding: 2px 16px;
     border-radius: 20px;
     background: transparent;
-    border: 2px solid $el-white-main;
+    border: none;
     text-align: center;
 
     &:hover {
       cursor: pointer;
       transition: all 0.2s ease-in-out;
-      border: 2px solid $el-active-blue;
+      color: $el-active-blue;
     }
   }
 }
