--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -18,6 +18,7 @@
 @import './components/sideNav';
 @import './components/_faq';
 @import './components/_contactForm';
+@import './components/userSettings';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
