--- a/Client/src/assets/styling/components/_contactForm.scss
+++ b/Client/src/assets/styling/components/_contactForm.scss
@@ -132,6 +132,26 @@
       }
     }
 
+    .email-fake {
+      position: relative;
+      transition: all 0.2s ease-in-out;
+      width: 100%;
+      height: 42px;
+      background-color: $el-bg-gray;
+      color: $text-main;
+      border: 2px solid transparent;
+      padding: 8px;
+      border-radius: 10px;
+      z-index: 1;
+      margin-bottom: 16px;
+      font-size: 0.9rem;
+      margin-top: 4px;
+      background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+        linear-gradient(to bottom, #f1550d, #f1550d5b);
+      background-origin: border-box;
+      background-clip: padding-box, border-box;
+    }
+
     .contact-form-textarea-input {
       width: 100%;
       height: 239px;
