--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -4,21 +4,29 @@
 .text-main {
   color: $text-main;
 }
+
 .text-secondary {
   color: $text-secondary;
 }
+
 .text-third {
   color: $text-third;
 }
+
 .text-disabled {
   color: $text-disabled;
 }
+
 .text-error-red {
   color: $text-error-red;
 }
 
 .text-active-blue {
   color: $el-active-blue;
+}
+
+.text-warning-orange {
+  color: $el-warning-orange;
 }
 
 .el-white-main {
@@ -166,6 +174,10 @@
   z-index: 2;
 }
 
+.margin-top-n11 {
+  margin-top: -11px;
+}
+
 .margin-tp-n100 {
   margin-top: -100px;
 }
@@ -184,6 +196,10 @@
 
 .margin-bm-32 {
   margin-bottom: 32px;
+}
+
+.padding-0 {
+  padding: 0;
 }
 
 .padding-16 {
