[Added] cookie dialog design

--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -1,6 +1,39 @@
 @use '../abstracts/colors' as *;
 @use '../abstracts/fonts' as *;
 
+.outline-btn {
+  transition: all 0.2s ease-in-out;
+  padding: 2px 20px;
+  border-radius: 20px;
+  width: 100%;
+  background: transparent;
+  border: 2px solid $el-white-main;
+  text-align: center;
+
+  &:hover {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    border: 2px solid $el-active-blue;
+  }
+}
+
+.filled-btn {
+  transition: all 0.2s ease-in-out;
+  padding: 2px 20px;
+  border-radius: 20px;
+  width: 100%;
+  transition: all 0.2s ease-in-out;
+  color: $text-secondary;
+  border: none;
+
+  &:hover {
+    color: $text-main;
+    transition: all 0.2s ease-in-out;
+    background-color: $el-active-blue;
+    cursor: pointer;
+  }
+}
+
 .text-main {
   color: $text-main;
 }
@@ -202,6 +235,14 @@
   padding: 0;
 }
 
+.padding-4 {
+  padding: 4px;
+}
+
+.padding-6 {
+  padding: 6px;
+}
+
 .padding-16 {
   padding: 16px;
 }
@@ -224,39 +265,6 @@
 
 .justify-between {
   justify-content: space-between;
-}
-
-.outline-btn {
-  transition: all 0.2s ease-in-out;
-  padding: 2px 20px;
-  border-radius: 20px;
-  width: 100%;
-  background: transparent;
-  border: 2px solid $el-white-main;
-  text-align: center;
-
-  &:hover {
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    border: 2px solid $el-active-blue;
-  }
-}
-
-.filled-btn {
-  transition: all 0.2s ease-in-out;
-  padding: 2px 20px;
-  border-radius: 20px;
-  width: 100%;
-  transition: all 0.2s ease-in-out;
-  color: $text-secondary;
-  border: none;
-
-  &:hover {
-    color: $text-main;
-    transition: all 0.2s ease-in-out;
-    background-color: $el-active-blue;
-    cursor: pointer;
-  }
 }
 
 .gap-16 {
