--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -19,6 +19,7 @@
 @import './components/_faq';
 @import './components/_contactForm';
 @import './components/userSettings';
+@import './components/cookieDialiog';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
