[Added] more validation

--- a/Client/src/assets/styling/components/_contactForm.scss
+++ b/Client/src/assets/styling/components/_contactForm.scss
@@ -132,7 +132,7 @@
       }
     }
 
-    .email-fake {
+    .input-warning {
       position: relative;
       transition: all 0.2s ease-in-out;
       width: 100%;
