--- a/Client/src/assets/styling/components/_userSettings.scss
+++ b/Client/src/assets/styling/components/_userSettings.scss
@@ -17,6 +17,7 @@
     border: 2px solid $el-border-gray;
     border-radius: 8px;
     width: 100%;
+    max-width: 320px;
 
     ul {
       padding: 0;
