--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -306,3 +306,26 @@
 .m-widt-1200 {
   max-width: 1200px;
 }
+
+// Buttons
+
+.btn-back {
+  background: transparent;
+  color: $text-main;
+  width: 40px;
+  height: 40px;
+  border-radius: 12px;
+  border: 2px solid $el-border-gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+
+  &:focus,
+  &:active,
+  &:hover {
+    cursor: pointer;
+    color: $el-active-blue;
+    border: 2px solid $el-active-blue;
+  }
+}
