--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -183,6 +183,18 @@
   max-width: 320px;
 }
 
+.height-204px {
+  height: 204px;
+}
+
+.height-219px {
+  height: 219px;
+}
+
+.height-239px {
+  height: 239px;
+}
+
 .height-100vh {
   height: 100vh;
 }
@@ -250,6 +262,10 @@
   padding: 6px;
 }
 
+.padding-8 {
+  padding: 8px;
+}
+
 .padding-16 {
   padding: 16px;
 }
@@ -312,6 +328,45 @@
 
 .m-widt-1200 {
   max-width: 1200px;
+}
+
+//Borders
+.border-2px-solid-el-border-gray {
+  border: 2px solid $el-border-gray;
+}
+
+.b-r-10 {
+  border-radius: 10px;
+}
+
+//Sizes
+.resize-none {
+  resize: none;
+}
+
+//Inputs
+
+.textarea-input {
+  width: 100%;
+  padding: 8px;
+  color: $text-main;
+  border: 2px solid $el-border-gray;
+  background-color: $el-bg-gray;
+  border-radius: 10px;
+  resize: none;
+  font-family: map-get($font-text-light, font-family);
+  font-weight: map-get($font-text-light, font-weight);
+  font-size: 0.9rem;
+
+  &:focus {
+    transition: all 0.2s ease-in-out;
+    outline: none;
+    border: 2px solid transparent;
+    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+      linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+  }
 }
 
 // Buttons
