[Added] logic to see all message history between the customer and the repair shop

--- a/Client/src/assets/styling/components/_userSent.scss
+++ b/Client/src/assets/styling/components/_userSent.scss
@@ -96,7 +96,7 @@
 
           p {
             font-size: 0.9rem;
-            color: $text-third;
+            color: $text-disabled;
             font-family: map-get($font-text-light, font-family);
             font-weight: map-get($font-text-light, font-weight);
           }
