--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -1,6 +1,6 @@
 $text-main: #d9d9d9;
 $text-secondary: #090909;
-$text-third: #3e3e3e;
+$text-third: #a5a5a5;
 $text-disabled: #9e9e9e;
 $text-error-red: #f10d0d;
 
@@ -21,3 +21,4 @@ $gr-dark-blue: #0d31f1;
 $bg-main: #090909;
 $bg-main-90: #090909de;
 $bg-secondary: #232323;
+$bg-third: #1b1b1b;
