[Added] new styling to the requests

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -21,4 +21,4 @@ $gr-dark-blue: #0d31f1;
 $bg-main: #090909;
 $bg-main-90: #090909de;
 $bg-secondary: #232323;
-$bg-third: #1b1b1b;
+$bg-third: #181818;
