--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -112,7 +112,7 @@
             gap: 4px;
 
             p {
-              padding: 8px;
+              padding: 8px 16px;
               display: flex;
               flex-direction: column;
               gap: 4px;
@@ -122,7 +122,7 @@
               font-family: map-get($font-text-light, font-family);
               font-weight: map-get($font-text-light, font-weight);
               background-color: $bg-third;
-              border-radius: 8px;
+              border-radius: 10px;
 
               span {
                 color: $text-third;
@@ -142,14 +142,23 @@
             height: 300px;
             color: $text-main;
             border: none;
-            background: transparent;
+            background: $bg-third;
             resize: none;
             font-size: 0.9rem;
             font-family: map-get($font-text-light, font-family);
             font-weight: map-get($font-text-light, font-weight);
+            border-radius: 10px;
+            padding: 8px 16px;
+            border: 2px solid $el-border-gray;
 
             &:focus {
+              transition: all 0.2s ease-in-out;
               outline: none;
+              border: 2px solid transparent;
+              background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+                linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+              background-origin: border-box;
+              background-clip: padding-box, border-box;
             }
           }
         }
@@ -158,7 +167,7 @@
           margin: 8px 0 16px 0;
           width: 100%;
           height: 42px;
-          background-color: $el-bg-gray;
+          background-color: $bg-third;
           font-size: 0.9rem;
           color: $text-main;
           font-family: map-get($font-text-light, font-family);
@@ -215,6 +224,15 @@
       }
     }
   }
+}
+
+.background-container {
+  background-color: aqua;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
 }
 
 @media screen and (min-width: 600px) {
@@ -311,7 +329,7 @@
               height: 300px;
               color: $text-main;
               border: none;
-              background: transparent;
+              background: $bg-third;
               resize: none;
               font-size: 0.9rem;
               font-family: map-get($font-text-light, font-family);
