[Added] a color to the repair shop old answer

--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -129,6 +129,9 @@
                 font-family: map-get($font-text-light, font-family);
                 font-weight: map-get($font-text-light, font-weight);
               }
+              .text-active-blue {
+                color: $el-active-blue;
+              }
             }
           }
 
