[Added] logic to display the request data to the left

--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -229,14 +229,14 @@
   }
 }
 
-.background-container {
-  background-color: aqua;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-}
+// .background-container {
+//   background-color: aqua;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   height: 100vh;
+//   // position: fixed;
+// }
 
 @media screen and (min-width: 600px) {
   .repair-shop-home-parent {
