--- a/Client/src/assets/styling/components/_userHome.scss
+++ b/Client/src/assets/styling/components/_userHome.scss
@@ -161,7 +161,7 @@
 
 @media screen and (min-width: 700px) {
   .signed-in-header {
-    padding: 32px;
+    padding: 24px 32px;
   }
 
   .signed-in-main {
