--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -20,6 +20,7 @@
 @import './components/userSettings';
 @import './components/newRequest';
 @import './components/cookieDialiog';
+@import './components/userHomeTablet';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
