--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -436,6 +436,12 @@
   }
 }
 
+// Visibility
+
+.hide {
+  visibility: none;
+}
+
 @media screen and (min-width: 700px) {
   .main-btn {
     font-size: 1rem;
