--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -322,6 +322,22 @@
   margin-bottom: 32px;
 }
 
+.line-active {
+  max-width: 100vw;
+  height: 2px;
+  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
+  margin: auto;
+  margin-top: 4px;
+}
+
+.line-inactive {
+  max-width: 100vw;
+  height: 2px;
+  background-color: #353535;
+  margin: auto;
+  margin-top: 4px;
+}
+
 .width-100 {
   width: 100%;
 }
