--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -5,15 +5,13 @@
   .user-sent-answer-form {
     display: flex;
     justify-content: space-between;
-    gap: 64px;
-    background-color: blue;
     width: calc(100vw - 32px);
 
     .request-column {
-      width: 50%;
+      width: calc(50% - 48px);
       display: flex;
       flex-direction: column;
-      gap: 32px;
+      gap: 48px;
       padding: 16px;
 
       .request-container-tablet {
@@ -55,20 +53,71 @@
             }
           }
         }
-
-        hr {
-          margin-top: 4px;
-        }
       }
     }
 
     .data-column {
       width: 50%;
       margin-left: -16px;
-      background-color: rgb(119, 0, 255);
 
       .data-container-tablet {
         padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        .data-column-message-container {
+          width: 100%;
+          margin-top: 10px;
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+
+          button {
+            position: absolute;
+            right: 0px;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: start;
+            justify-content: end;
+            background: transparent;
+            border: none;
+            border-radius: 10px;
+            padding: 16px;
+            color: $text-main;
+
+            &:hover {
+              color: $el-active-blue;
+              cursor: pointer;
+            }
+          }
+
+          p {
+            padding: 8px 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            margin-bottom: 4px;
+            font-size: 0.9rem;
+            color: $text-main;
+            font-family: map-get($font-text-light, font-family);
+            font-weight: map-get($font-text-light, font-weight);
+            background-color: $bg-third;
+            border-radius: 10px;
+            position: relative;
+
+            span {
+              color: $text-third;
+              font-family: map-get($font-text-light, font-family);
+              font-weight: map-get($font-text-light, font-weight);
+            }
+            .text-active-blue {
+              color: $el-active-blue;
+            }
+          }
+        }
       }
     }
 
