--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -73,7 +73,30 @@
           flex-direction: column;
           gap: 4px;
 
-          button {
+          .message-box-collapesed {
+            button {
+              position: absolute;
+              right: 0px;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              display: flex;
+              align-items: start;
+              justify-content: end;
+              background: transparent;
+              border: none;
+              border-radius: 10px;
+              padding: 16px;
+              color: $text-main;
+
+              &:hover {
+                color: $el-active-blue;
+                cursor: pointer;
+              }
+            }
+          }
+
+          .collapse-message-box {
             position: absolute;
             right: 0px;
             top: 0;
@@ -115,6 +138,58 @@
             }
             .text-active-blue {
               color: $el-active-blue;
+            }
+          }
+
+          .text-editor-answer {
+            width: 100%;
+            height: 300px;
+            color: $text-main;
+            border: none;
+            background: $bg-third;
+            resize: none;
+            font-size: 0.9rem;
+            font-family: map-get($font-text-light, font-family);
+            font-weight: map-get($font-text-light, font-weight);
+            border-radius: 10px;
+            padding: 8px 16px;
+            border: 2px solid $el-border-gray;
+            margin-top: 32px;
+
+            &:focus {
+              transition: all 0.2s ease-in-out;
+              outline: none;
+              border: 2px solid transparent;
+              background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+                linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+              background-origin: border-box;
+              background-clip: padding-box, border-box;
+            }
+          }
+
+          .price-offer-input {
+            margin: 8px 0 16px 0;
+            width: 100%;
+            height: 42px;
+            background-color: $bg-third;
+            font-size: 0.9rem;
+            color: $text-main;
+            font-family: map-get($font-text-light, font-family);
+            font-weight: map-get($font-text-light, font-weight);
+            border: 2px solid $el-border-gray;
+            padding: 10px;
+            border-radius: 10px;
+            z-index: 1;
+
+            &:focus {
+              transition: all 0.2s ease-in-out;
+              outline: none;
+              border: 2px solid transparent;
+              border-radius: 10px;
+              background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+                linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+              background-origin: border-box;
+              background-clip: padding-box, border-box;
             }
           }
         }
