--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -71,7 +71,7 @@
           margin-top: 10px;
           display: flex;
           flex-direction: column;
-          gap: 4px;
+          gap: 6px;
 
           .message-box-collapesed {
             button {
@@ -154,7 +154,8 @@
             border-radius: 10px;
             padding: 8px 16px;
             border: 2px solid $el-border-gray;
-            margin-top: 32px;
+            margin-top: 4px;
+            margin-bottom: 4px;
 
             &:focus {
               transition: all 0.2s ease-in-out;
@@ -168,7 +169,6 @@
           }
 
           .price-offer-input {
-            margin: 8px 0 16px 0;
             width: 100%;
             height: 42px;
             background-color: $bg-third;
@@ -180,6 +180,7 @@
             padding: 10px;
             border-radius: 10px;
             z-index: 1;
+            margin-bottom: 8px;
 
             &:focus {
               transition: all 0.2s ease-in-out;
