--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -106,6 +106,10 @@
   list-style: none;
 }
 
+.text-align-left {
+  text-align: left;
+}
+
 .text-align-center {
   text-align: center;
 }
@@ -142,12 +146,24 @@
   font-size: 3.5rem;
 }
 
+.width-100 {
+  width: 100%;
+}
+
 .width-100vw {
   width: 100vw;
 }
 
+.m-width-100 {
+  max-width: 100%;
+}
+
 .m-width-320px {
   max-width: 320px;
+}
+
+.m-width-1200px {
+  max-width: 1200px;
 }
 
 .h-42px {
@@ -208,6 +224,10 @@
 
 .margin-tp-4 {
   margin-top: 4px;
+}
+
+.margin-tp-16 {
+  margin-top: 16px;
 }
 
 .margin-top-n11 {
