--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -71,6 +71,8 @@
 
         .data-column-message-container {
           width: 100%;
+          max-height: 500px;
+          overflow-y: scroll;
           margin-top: 10px;
           display: flex;
           flex-direction: column;
