--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -71,7 +71,7 @@
 
         .data-column-message-container {
           width: 100%;
-          max-height: 500px;
+          max-height: 600px;
           overflow-y: scroll;
           margin-top: 10px;
           display: flex;
@@ -148,7 +148,7 @@
 
           .text-editor-answer {
             width: 100%;
-            height: 300px;
+            min-height: 300px;
             color: $text-main;
             border: none;
             background: $bg-third;
