--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -310,6 +310,13 @@
   gap: 16px;
 }
 
+.blue-line {
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
+  margin: auto;
+}
+
 .blue-line-mb-16 {
   max-width: 100vw;
   height: 2px;
