--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -218,6 +218,10 @@ p {
   z-index: 2;
 }
 
+.margin-au {
+  margin: auto;
+}
+
 .margin-4-0 {
   margin: 4px 0;
 }
@@ -290,6 +294,34 @@ p {
   padding: 16px;
 }
 
+.padding-tp-105 {
+  padding-top: 105px;
+}
+
+.padding-tp-137 {
+  padding-top: 137px;
+}
+
+.padding-rt-16 {
+  padding-right: 16px;
+}
+
+.padding-rt-32 {
+  padding-right: 32px;
+}
+
+.padding-bm-0 {
+  padding-bottom: 0;
+}
+
+.padding-lt-16 {
+  padding-left: 16px;
+}
+
+.padding-lt-32 {
+  padding-left: 16px;
+}
+
 .display-flex {
   display: flex;
 }
@@ -320,6 +352,14 @@ p {
 
 .gap-24 {
   gap: 24px;
+}
+
+.gap-32 {
+  gap: 32px;
+}
+
+.gap-48 {
+  gap: 48px;
 }
 
 .blue-line {
@@ -562,13 +602,11 @@ p {
 }
 
 // Visibility
-
 .hide {
   visibility: none;
 }
 
 // Transitions
-
 .All-02-e-i-o {
   transition: all 0.2s ease-in-out;
 }
