[Fixed] parts of the styling for the mobile version for user home

--- a/Client/src/assets/styling/components/_contactForm.scss
+++ b/Client/src/assets/styling/components/_contactForm.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
 }
-video .confirmation-box {
+.confirmation-box {
   transition: all 0.2s ease-in-out;
   border: 2px solid transparent;
   background-color: $bg-main;
