--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -238,6 +238,10 @@ p {
   margin-top: 4px;
 }
 
+.margin-tp-10 {
+  margin-top: 10px;
+}
+
 .margin-tp-16 {
   margin-top: 16px;
 }
@@ -340,6 +344,10 @@ p {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-4 {
+  gap: 4px;
 }
 
 .gap-8 {
@@ -564,6 +572,24 @@ p {
   &:hover {
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    color: $el-active-blue;
+  }
+}
+
+.show-more-btn {
+  background: transparent;
+  border: none;
+  color: $text-main;
+  position: absolute;
+  border-bottom: 15px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: right;
+
+  &:hover {
+    cursor: pointer;
     color: $el-active-blue;
   }
 }
