--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -196,6 +196,10 @@ p {
   height: 239px;
 }
 
+.h-300 {
+  height: 300px;
+}
+
 .height-100vh {
   height: 100vh;
 }
@@ -244,6 +248,10 @@ p {
   margin-top: 4px;
 }
 
+.margin-tp-8 {
+  margin-top: 8px;
+}
+
 .margin-tp-10 {
   margin-top: 10px;
 }
@@ -270,6 +278,10 @@ p {
 
 .margin-bm-4 {
   margin-bottom: 4px;
+}
+
+.margin-bm-8 {
+  margin-bottom: 8px;
 }
 
 .margin-bm-16 {
@@ -302,6 +314,10 @@ p {
 
 .padding-8 {
   padding: 8px;
+}
+
+.padding-10 {
+  padding: 10px;
 }
 
 .padding-16 {
@@ -453,7 +469,7 @@ p {
   resize: none;
 }
 
-//Inputs
+// Inputs
 
 .textarea-input {
   width: 100%;
