--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -83,6 +83,10 @@
   background-color: $bg-third;
 }
 
+.bg-tran {
+  background: transparent;
+}
+
 .t-b-gradient {
   background: -webkit-linear-gradient(#2c8be2, #0d31f1);
   -webkit-background-clip: text;
@@ -172,6 +176,10 @@ p {
   max-width: 320px;
 }
 
+.m-width-330px {
+  max-width: 330px;
+}
+
 .m-width-1200px {
   max-width: 1200px;
 }
@@ -220,6 +228,10 @@ p {
   left: 0;
 }
 
+.right-0 {
+  right: 0;
+}
+
 .z-index-1 {
   z-index: 1;
 }
@@ -242,6 +254,10 @@ p {
 
 .margin-32-0 {
   margin: 32px 0;
+}
+
+.m-tp-m4 {
+  margin-top: -22px;
 }
 
 .margin-tp-4 {
@@ -376,6 +392,10 @@ p {
   justify-content: space-between;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-4 {
   gap: 4px;
 }
@@ -455,9 +475,94 @@ p {
   max-width: 1200px;
 }
 
+.message-box-collapesed {
+  button {
+    position: absolute;
+    right: 0px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: end;
+    background: transparent;
+    border: none;
+    border-radius: 10px;
+    padding: 16px;
+    color: $text-main;
+
+    &:hover {
+      color: $el-active-blue;
+      cursor: pointer;
+    }
+  }
+}
+
+.collapse-message-box {
+  position: absolute;
+  right: 0px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: start;
+  justify-content: end;
+  background: transparent;
+  border: none;
+  border-radius: 10px;
+  padding: 16px;
+  color: $text-main;
+
+  &:hover {
+    color: $el-active-blue;
+    cursor: pointer;
+  }
+}
+
+// Dialogs
+.confirmation-box {
+  transition: all 0.2s ease-in-out;
+  border: 2px solid transparent;
+  background-color: $bg-main;
+  background-image: linear-gradient($bg-main, $bg-main),
+    linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  padding: 32px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+}
+
+.confirmation-box-error {
+  transition: all 0.2s ease-in-out;
+  border: 2px solid transparent;
+  background-color: $bg-main;
+  background-image: linear-gradient($bg-main, $bg-main),
+    linear-gradient(to bottom, #f10d0d, #f10d0d44);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  padding: 32px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+}
+
 //Borders
 .border-2px-solid-el-border-gray {
   border: 2px solid $el-border-gray;
+}
+
+.b-n {
+  border: none;
 }
 
 .b-r-10 {
@@ -566,9 +671,6 @@ p {
   transition: all 0.2s ease-in-out;
   background-color: $el-active-blue;
   border: none;
-  color: $text-main;
-  font-family: map-get($font-title-bold, font-family);
-  font-weight: map-get($font-title-bold, font-weight);
   font-size: 0.9rem;
   height: 42px;
   border-radius: 50px;
@@ -607,6 +709,7 @@ p {
 }
 
 .show-more-btn {
+  transition: all 0.2s ease-in-out;
   background: transparent;
   border: none;
   color: $text-main;
@@ -619,14 +722,27 @@ p {
   text-align: right;
 
   &:hover {
+    transition: all 0.2s ease-in-out;
     cursor: pointer;
     color: $el-active-blue;
   }
 }
 
+.remove-btn {
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  background: transparent;
+  border: none;
+
+  &:hover {
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    color: $text-error-red;
+  }
+}
+
 .outline-btn {
   transition: all 0.2s ease-in-out;
-  padding: 2px 20px;
   border-radius: 20px;
   width: 100%;
   background: transparent;
@@ -642,7 +758,6 @@ p {
 
 .filled-btn {
   transition: all 0.2s ease-in-out;
-  padding: 2px 20px;
   border-radius: 20px;
   width: 100%;
   transition: all 0.2s ease-in-out;
