--- a/Client/src/assets/styling/components/_newRequest.scss
+++ b/Client/src/assets/styling/components/_newRequest.scss
@@ -78,7 +78,8 @@
     }
   }
 
-  .text-editor {
+  .text-editor,
+  .text-editor-warning {
     width: 100%;
     height: 300px;
     padding: 8px;
@@ -100,6 +101,13 @@
         linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
       background-origin: border-box;
       background-clip: padding-box, border-box;
+    }
+  }
+
+  .text-editor-warning {
+    &:focus {
+      background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+        linear-gradient(to bottom, rgb(241, 85, 13), rgb(241, 85, 13, 0.2));
     }
   }
 
@@ -218,11 +226,12 @@
         }
       }
 
-      .text-editor {
+      .text-editor,
+      .text-editor-warning {
         width: 100%;
         height: 300px;
         font-size: 1rem;
-        margin-bottom: 64px;
+        margin-bottom: 16px;
       }
 
       .user-home-send-btn {
@@ -230,6 +239,7 @@
         height: 45px;
         margin: 7px 0;
         width: 100%;
+        margin-bottom: calc(64px - 16px);
 
         &:hover {
           transition: all 0.2s ease-in-out;
@@ -243,190 +253,8 @@
         height: 45px;
         margin: 7px 0;
         width: 100%;
+        margin-bottom: calc(64px - 16px);
       }
     }
   }
 }
-
-// @media screen and (min-width: 900px) {
-//   .signed-in-header {
-//     padding: 32px;
-//     margin-left: 174px;
-//     max-width: 700px;
-//   }
-
-//   .signed-in-main {
-//     padding: 16px 32px;
-//     margin-left: 174px;
-//     max-width: 700px;
-
-//     form {
-//       max-width: 700px;
-//       display: flex;
-//       gap: 32px;
-//       justify-content: center;
-
-//       .right-side-contact-form {
-//         width: 100%;
-//         order: 2;
-//         display: flex;
-//         flex-direction: column;
-//       }
-
-//       .left-side-contact-form {
-//         width: 100%;
-//         order: 1;
-//       }
-
-//       .signed-in-contact-form-select {
-//         margin: 8px 0 16px 0;
-//         width: 100%;
-//         height: 45px;
-//         padding: 8px;
-//         font-size: 1rem;
-
-//         &:focus {
-//           font-size: 1rem;
-//         }
-//       }
-
-//       input {
-//         margin: 8px 0 16px 0;
-//         width: 100%;
-//         height: 45px;
-//         font-size: 1rem;
-
-//         &:focus {
-//           font-size: 1rem;
-//         }
-//       }
-
-//       .text-editor {
-//         width: 100%;
-//         height: 300px;
-//         font-size: 1rem;
-//         margin-bottom: 64px;
-//       }
-
-//       .user-home-send-btn {
-//         font-size: 1rem;
-//         height: 45px;
-//         margin: 7px 0;
-//         width: 100%;
-
-//         &:hover {
-//           transition: all 0.2s ease-in-out;
-//           cursor: pointer;
-//           background-color: $el-active-blue-hover;
-//         }
-//       }
-
-//       .user-home-send-btn-disabled {
-//         font-size: 1rem;
-//         height: 45px;
-//         margin: 7px 0;
-//         width: 100%;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (min-width: 1482px) {
-//   .signed-in-header {
-//     padding: 64px;
-//     max-width: 1200px;
-//     margin-left: 233px;
-//   }
-
-//   .signed-in-main {
-//     padding: 0px 64px;
-//     max-width: 1200px;
-//     margin-left: 233px;
-
-//     form {
-//       max-width: 1482px;
-//       display: flex;
-//       gap: 64px;
-//       justify-content: center;
-
-//       .right-side-contact-form {
-//         width: 100%;
-//         order: 2;
-//         display: flex;
-//         flex-direction: column;
-//       }
-
-//       .left-side-contact-form {
-//         width: 100%;
-//         order: 1;
-//       }
-
-//       .signed-in-contact-form-select {
-//         margin: 8px 0 24px 0;
-//         width: 100%;
-//         height: 45px;
-//         padding: 8px;
-//         font-size: 1rem;
-
-//         &:focus {
-//           font-size: 1rem;
-//         }
-//       }
-
-//       input {
-//         margin: 8px 0 24px 0;
-//         width: 100%;
-//         height: 45px;
-//         font-size: 1rem;
-
-//         &:focus {
-//           font-size: 1rem;
-//         }
-//       }
-
-//       .text-editor {
-//         width: 100%;
-//         height: 324px;
-//         font-size: 1rem;
-//         margin-bottom: 64px;
-//       }
-
-//       .user-home-send-btn {
-//         transition: all 0.2s ease-in-out;
-//         background-color: $el-active-blue;
-//         border: none;
-//         color: $text-main;
-//         font-family: map-get($font-title-bold, font-family);
-//         font-weight: map-get($font-title-bold, font-weight);
-//         font-size: 0.9rem;
-//         height: 45px;
-//         border-radius: 50px;
-//         margin: 8px 0;
-//         width: 100%;
-
-//         &:hover {
-//           transition: all 0.2s ease-in-out;
-//           cursor: pointer;
-//           background-color: $el-active-blue-hover;
-//         }
-//       }
-
-//       .user-home-send-btn-disabled {
-//         font-size: 1rem;
-//         height: 45px;
-//         margin: 8px 0;
-//         width: 100%;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (min-width: 1665px) {
-//   .signed-in-header {
-//     margin: auto;
-//   }
-
-//   .signed-in-main {
-//     margin: auto;
-//   }
-// }
